// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-ambee destination: subscribeUserToCampaign action - all fields 1`] = `
Object {
  "airQualitySubscription": "hazardous",
  "campaignId": "^XXUmeaMilBog0fn5MdS",
  "email": "^XXUmeaMilBog0fn5MdS",
  "ipAddress": "^XXUmeaMilBog0fn5MdS",
  "pollenSubscription": "very_high",
  "userId": "^XXUmeaMilBog0fn5MdS",
}
`;

exports[`Testing snapshot for actions-ambee destination: subscribeUserToCampaign action - required fields 1`] = `
Object {
  "email": "^XXUmeaMilBog0fn5MdS",
  "ipAddress": "^XXUmeaMilBog0fn5MdS",
  "userId": "^XXUmeaMilBog0fn5MdS",
}
`;
